--- a/index.html
+++ b/index.html
@@ -3,9 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Assaignment</title> 
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    hello
+    <header>
+<div class="banner">
+    <div class="banner-content">
+       <h4 class="greatting">Bangladesh 2.0</h4>
+       <p class="banner-item">Idea , innovation ,
+        vision and challenges in New Bangladesh.</p>
+        <button class="btn-primary">Explore New Bangladesh</button>
+    </div>
+    <img class="banner-profile-pic" src="B11A1--assignment-1/assets/hero.png" alt="">
+</div>
+    </header>
+        
+<main>
+
+
+</main>
+<footer>
+
+</footer>
+
+    
 </body>
 </html>
