--- a/index.html
+++ b/index.html
@@ -20,8 +20,54 @@
     </header>
         
 <main>
-
-
+<div class="skill-container">
+    <div class="skill">
+        <img src="B11A1--assignment-1/assets/card-icon.png" alt="">
+        <h4 class="skill-title">Innovation</h4>
+        <p class="skill-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+    </div>
+    <div class="skill">
+        <img src="B11A1--assignment-1/assets/card-icon.png" alt="">
+        <h4 class="skill-title">Sustainability</h4>
+        <p class="skill-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+    </div>
+    <div class="skill">
+        <img src="B11A1--assignment-1/assets/card-icon.png" alt="">
+        <h4 class="skill-title">Infrastructure</h4>
+        <p class="skill-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+    </div>
+    <div class="skill">
+        <img src="B11A1--assignment-1/assets/card-icon.png" alt="">
+        <h4 class="skill-title">Empowerment</h4>
+        <p class="skill-description">Dolor sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+  
+    </div>
+   
+</div>
+<section class="title">
+    <h3 class="section-title"> Vision of Future</h3>
+    <p class="section-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+   </section>
+<div class="Future-oppertunity">
+<div class="future-1">
+    <img src="B11A1--assignment-1/assets/card-icon.png" alt="">
+    <h4 class="future-title">Digital Transformation</h4>
+    <p class="future-description">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+<button class="btn-1">Learn More</button>
+</div>
+<div class="future-2">
+    <img src="B11A1--assignment-1/assets/card-icon.png" alt="">
+    <h4 class="future-title">Green Energy</h4>
+    <p class="future-description">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+<button class="btn-2">Learn More</button>
+</div>
+<div class="future-3">
+    <img src="B11A1--assignment-1/assets/card-icon.png" alt="">
+    <h4 class="future-title">Modern Infrastructure</h4>
+    <p class="future-description">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
+<button class="btn-3">Learn More</button>
+</div>
+</div>
 </main>
 <footer>
 
