--- a/index.html
+++ b/index.html
@@ -68,7 +68,26 @@
 <button class="btn-3">Learn More</button>
 </div>
 </div>
+<div class="text">
+    <p class="text-daialouge">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas, ducimus labore sequi quos deserunt optio id repellendus tempora veniam amet porro corporis exercitationem numquam debitis culpa laudantium odio, velit vel minus sit? Veritatis aut maiores ducimus fugit error ex sit, dignissimos eum tempora perferendis a rem culpa ab aliquid modi? Est vitae neque esse, cumque, quam tenetur rem earum eaque mollitia modi ipsum aspernatur, dignissimos excepturi aliquam architecto soluta necessitatibus vero?"</p>
+<h4 class="text-title">Dr. Muhammad Yunus</h4>
+<h5>Chief Adviser of the People's Republic of Bangladesh</h5>
+</div>
+<div class="Frame-1">
+    <img class="satelite" src="B11A1--assignment-1/assets/satelite.png" alt="">
+<h4 class="headding">Bangladesh Launches New Satellite</h4>
+<p class="pharagraph">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+    with a certain degree of justification, be able to speak of humankind as civilized</p>
+<button class="read">Read more</button>
+</div>
 </main>
+<div class="Frame-2">
+<img src="B11A1--assignment-1/assets/satelite.png" alt="">
+<h4 class="headding">Bangladesh Launches New Satellite</h4>
+<p class="pharagraph">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+    with a certain degree of justification, be able to speak of humankind as civilized</p>
+<button class="read">Read more</button>
+</div>
 <footer>
 
 </footer>
