--- a/index.html
+++ b/index.html
@@ -73,12 +73,14 @@
 <h4 class="text-title">Dr. Muhammad Yunus</h4>
 <h5>Chief Adviser of the People's Republic of Bangladesh</h5>
 </div>
-<div class="Frame-1">
+<div class="Frame">
+    <div class="Frame-1">
     <img class="satelite" src="B11A1--assignment-1/assets/satelite.png" alt="">
 <h4 class="headding">Bangladesh Launches New Satellite</h4>
 <p class="pharagraph">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
     with a certain degree of justification, be able to speak of humankind as civilized</p>
 <button class="read">Read more</button>
+</div>
 </div>
 </main>
 <div class="Frame-2">
@@ -87,6 +89,32 @@
 <p class="pharagraph">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
     with a certain degree of justification, be able to speak of humankind as civilized</p>
 <button class="read">Read more</button>
+</div>
+<div class="poster">
+    <h1 class="font">Donate Today</h1>
+    <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+</div>
+<div class="donate">
+<div class="donate-taka">
+<h2>100 Taka</h2>
+<h2>200 Taka</h2>
+<h2>500 Taka</h2>
+<h2>1000 Taka</h2>
+</div>
+<section class="box-size">
+    <h3>Subscribe Newsletter</h3>
+    <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth.</p>
+<form> <feildset> </feildset>Enter your email here
+<input type="text ">
+
+</form>
+<p>We promise not to spam you!</p>
+</section>
+<div class="bd">
+    <h2>Bangladesh 2.0</h2>
+    <img src="B11A1--assignment-1/assets/facebook.png" alt="">
+<img src="B11A1--assignment-1/assets/instagram.png" alt="">
+<img src="B11A1--assignment-1/assets/x.png" alt="">
 </div>
 <footer>
 
